# iron_api

./: .env  Cargo.toml
migrations/2022-01-19-075915_create_books/: up.sql
migrations/2022-02-03-064151_student/: up.sql
public/: 404.html  index.html
src/: database.rs  db.rs  from_request.rs  handlers.rs  main.rs  model.rs  models.rs  modle.rs  routes.rs  schema.rs  static_files.rs
