[package]
name = "rocket_diesel_prac01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "1.4", features = ["postgres"]}
dotenv = "*"
r2d2 = "*"
r2d2-diesel = "1.0.0"
serde = {version = "*", features = ["derive"]}
serde_json = "*" 

rocket = { version = "0.4.8"}
rocket_contrib = {version = "*", default-features = false, features = ["json"] }
