[package]
name = "rocket_diesel_prac01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
r2d2 = "*"
r2d2-diesel = "1.0.0"
rocket = "0.4.8"
serde_json = "*"

serde = { version = "*", features = ["derive"]}
diesel = { version = "*", features = ["postgres"]}
rocket_contrib = {version = "*", default-features = false, features = ["json"] }

